@@ -1,3 +1,6 @@
+2005-07-02 Mariusz Woloszyn
+	* src/ptpcam.c, src/ptp.c: fixed a bug that caused files over 2MB to
+	  be corrupted while downloading. 
 2005-04-21 Mariusz Woloszyn
 	* src/ptpcam.c,src/ptpcam.h: added --capture, --delete-object and
 	  --delete-all-files support
